--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
