--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.2",
     "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.4"
   },
