--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+   "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.4"
